--- a/app/views/1-8-7/period-end-part-2.html
+++ b/app/views/1-8-7/period-end-part-2.html
@@ -11,63 +11,88 @@
 
 <!-- <script src="/public/javascripts/tt.js"></script> -->
 
-<a id="backlink" href="#" class="govuk-back-link">Back</a>
+<div class="govuk-breadcrumbs">
+  <ol class="govuk-breadcrumbs__list">
+    <li class="govuk-breadcrumbs__list-item">
+      <a class="govuk-breadcrumbs__link" href="dashboard">Home</a>
+    </li>
+    <li class="govuk-breadcrumbs__list-item">
+      <a class="govuk-breadcrumbs__link" href="period-end-dashboard">Period end</a>
+    </li>
+    <li class="govuk-breadcrumbs__list-item">
+      <a class="govuk-breadcrumbs__link" href="period-end">ILR</a>
+    </li>
+    <li class="govuk-breadcrumbs__list-item" aria-current="page">Period end</li>
+  </ol>
+</div>
 <br>
 <br>
 <div class="govuk-grid-row">
+  <div class="govuk-grid-column-one-third">
+    <ul class="govuk-list">
 
-
-  <div class="govuk-grid-column-one-third sticky">
-
-      <span class="govuk-heading-s">Critical</span>
-      <span id="nav">
-        <ul class="govuk-list">
-
-          <li>
-            <a href="#reference-data-jobs" class="govuk-link">1. Reference database jobs</a><span class="green-dot hidden"></span><span class="govuk-warning-text__icon custom" aria-hidden="true">!</span>
-          </li>
-          <li>
-            <a href="#summarisation" class="govuk-link">2. Summarisation</a>
-          </li>
-          <li>
-            <a href="#das-period-end" class="govuk-link">3. DAS Period end</a>
-          </li>
-          <li>
-            <a href="#apps-summarisation" class="govuk-link">4. Apps summarisation</a>
-          </li>
-          <li>
-            <a href="#fcs-handover" class="govuk-link">5. FCS handover</a>
-          </li>
-
-        </ul>
-
-        <span class="govuk-heading-s">Non-critical</span>
-
-        <ul class="govuk-list">
-
-
-          <li>
-            <a href="#deds-extracts" class="govuk-link">DEDS extracts</a>
-          </li>
-          <li>
-            <a href="#month-end-reports" class="govuk-link">Month end reports </a>
-          </li>
-          <li>
-            <a href="#das-support-accounts" class="govuk-link">DAS support accounts</a>
-          </li>
-
-        </ul>
-      </span>
-      <br>
-      <span class="govuk-heading-s">Outputs</span>
-
+      <li>
+        <div class="flex"><a href="period-end-reports" class="govuk-link ">Reports </a></div>
+      </li>
+      <li>
+        <a href="period-end-history" class="govuk-link">History</a>
+      </li>
+    </ul>
+    <span class="govuk-heading-s">Critical path</span>
+    <span id="nav">
       <ul class="govuk-list">
 
         <li>
-          <div class="flex"><a href="period-end-reports" class="govuk-link ">Reports </a><span class="red-dot hidden">1</span></div>
+          <a href="#reference-data-jobs" class="govuk-link">1. Reference database jobs</a><span class="green-dot hidden"></span><span class="govuk-warning-text__icon custom" aria-hidden="true">!</span>
+        </li>
+        <li>
+          <a href="#summarisation" class="govuk-link">2. Summarisation</a>
+        </li>
+        <li>
+          <a href="#das-period-end" class="govuk-link">3. DAS Period end</a>
+        </li>
+        <li>
+          <a href="#apps-summarisation" class="govuk-link">4. Apps summarisation</a>
+        </li>
+        <li>
+          <a href="#fcs-handover" class="govuk-link">5. FCS handover</a>
         </li>
 
       </ul>
+
+      <span class="govuk-heading-s">Non-critical</span>
+
+      <ul class="govuk-list">
+
+
+        <li>
+          <a href="#deds-extracts" class="govuk-link">DEDS extracts</a>
+        </li>
+        <li>
+          <a href="#month-end-reports" class="govuk-link">Month end reports </a>
+        </li>
+        <li>
+          <a href="#das-support-accounts" class="govuk-link">DAS support accounts</a>
+        </li>
+
+      </ul>
+    </span>
+    <br>
+    <span class="govuk-heading-s">Outputs</span>
+
+    <ul class="govuk-list">
+
+      <li>
+        <div class="flex"><a href="period-end-reports" class="govuk-link ">Reports </a><span class="red-dot hidden">1</span></div>
+      </li>
+
+    </ul>
+
+  </div>
+
+  <div class="govuk-grid-column-one-third sticky">
+
+
       <!-- <div class="govuk-heading-m">Non critical</div> -->
 
     <!-- <div class="govuk-accordion" data-module="accordion" id="accordion-default">
