--- a/app/views/index.html
+++ b/app/views/index.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  GOV.UK Prototype Kit
+  Data Collections Operations
 {% endblock %}
 
 {% block content %}
@@ -25,11 +25,14 @@
    <tbody class="govuk-table__body">
 
      <tr class="govuk-table__row">
-         <th class="govuk-table__header" scope="row">Ready Salted 1.8.7<p>07/02/2020</p></th>
+         <th class="govuk-table__header" scope="row">Ready Salted 1.8.7<p>27/03/2020</p></th>
          <td class="govuk-table__cell ">
-           <p>Prototype - in progress 24/02/2020</p>
+           <p>Prototype - in progress 27/03/2020</p>
            <ul class="govuk-list govuk-list--bullet">
-             <li>Added <a href="1-8-7/dashboard">Reference data</a> feature and added link on primary navigation  </li>
+             <li><a href="1-8-7/dashboard">Primary navigation</a> modified adding Reference Data, separated FRM report into 'FRM' & 'Reports'</li>
+             <li>Added <a href="1-8-7/dashboard">last hour processing time</a> along with Average processing time in dashboard  </li>
+             <li>Added <a href="1-8-7/reference-data-dashboard">Reference data</a> dashboard and pages for sections 'Campus identifiers', 'Funding claim dates' & 'Validation Messages 19-20'  </li>
+             <li><a href="1-8-7/period-end-dashboard">Period End</a> design iterations added dashboard with sections new sections - 'ALLF & NCS' and separated 'Application version' & 'Email distribution' from ILR and modified design iteation of 'ILR' . </li>
            </ul>
          </td>
          <td class="govuk-table__cell "><a href="#">Contents</a></td>
